[gd_scene load_steps=6 format=2]

[ext_resource path="res://enemies/EnemyBase.gd" type="Script" id=1]
[ext_resource path="res://assets/progressbar/glassPanel_200.png" type="Texture" id=2]
[ext_resource path="res://assets/progressbar/barHorizontal_red_mid 200.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 25, 25 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": false,
"name": "die",
"speed": 5.0
}, {
"frames": [  ],
"loop": false,
"name": "hurt",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "move",
"speed": 5.0
} ]

[node name="EnemyBase" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )

[node name="ProgressContainer" type="Node2D" parent="."]
position = Vector2( 0, -50 )
scale = Vector2( 0.5, 0.5 )

[node name="TextureProgress" type="TextureProgress" parent="ProgressContainer"]
margin_left = -100.0
margin_right = 100.0
value = 100.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "hurt"

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_EnemyBase_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_EnemyBase_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
